comment on post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,14 @@
             <li><a class="dropdown-item" href="<%=books_path%>">Books</a></li>
           </ul>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Posts
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="<%=posts_path%>">Posts</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
@@ -52,7 +60,7 @@
 <% if notice.present? %>
   <p class="alert alert-success"><%= notice %></p>
 <% end %>
-<% if flash.present? %>
+<% if flash[:alert].present? %>
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 <%= yield %>
