--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,10 @@
 <div id="<%= dom_id post %>">
   <p>
-    <strong>Title:</strong>
-    <%= post.title %>
+    <h2>Title:</h2>
+    <h4>"<%= post.title %>"</h4>
   </p>
-
   <p>
-    <strong>Description:</strong>
-    <%= post.description %>
+    <h2>Description:</h2>
+    <h4>"<%= post.description %>"</h4>
   </p>
-
 </div>
