--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -6,3 +6,11 @@
 	background-size:100% 100%;
 	background-attachment: fixed;
 }
+
+.sub-comment{
+	padding-left: 30px;
+}
+.comment-form{
+	display: none;
+	
+}
