--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,4 @@
-<p style="color: green"><%= notice %></p>
-<% if current_user %>
+<div class="container"><% if current_user %>
   <%= link_to "Log-Out", destroy_user_session_path, class:"btn btn-danger", data: {turbo_method: :delete} %><br>
 <% end %>
 <h1>Posts</h1>
