--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,11 @@
-<%= render @post %>
-<p>
-  <strong>Comments:</strong>
-  <%= render @post.comments.order(id: :desc) %>
-  <%= render partial: 'comments/form', locals: { post: @post }%>
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
-  <%= button_to "Destroy this post", @post, method: :delete %>
-</div>
+<div class="container">
+  <%= render @post %>
+    <h4>Comments:-</h4>
+    <%= render @post.comments.where(parent_id: nil).includes(:user).order(id: :desc) %>
+    <%= render partial: 'comments/form', locals: { post: @post,parent: nil }%>
+    <div>
+      <%= link_to "Edit this post", edit_post_path(@post) %> |
+      <%= link_to "Back to posts", posts_path %>
+      <%= button_to "Destroy this post", @post,class:'btn btn-primary', method: :delete %>
+    </div>
+</div>  
